adapted the site to tablet and mobile

--- a/style/index.css
+++ b/style/index.css
@@ -109,17 +109,20 @@ a:hover {
 }
 h1 {
 	font-size: 5rem;
-	margin-bottom: 2%;
+  line-height: 1.2;
+	margin-bottom: 4%;
 	color: white;
 }
 h2 {
 	font-size: 4rem;
-	margin-bottom: 2%;
+  line-height: 1.2;
+	margin-bottom: 4%;
 	color: white;
 }
 h3 {
 	font-size: 2.5rem;
-	margin-bottom: 2%;
+  line-height: 1.2;
+	margin-bottom: 4%;
 	color: white;
 }
 p {
@@ -128,7 +131,8 @@ p {
 .meta {
 	font-size: 1rem;
 	color: rgba(255, 255, 255, 0.2);
-	text-align: left;
+	text-align: center;
+  padding-top: 24px;
 }
 
 /*Button Styles*/
@@ -155,17 +159,18 @@ header {
 	background-color: black;
 	padding: 4%;
 }
-header a {
-	text-transform: uppercase;
-	margin-right: 2%;
-}
 nav {
 	padding-top: 2%;
+}
+nav a {
+	text-transform: uppercase;
+	margin-right: 2%;
 }
 
 /*About Section*/
 #about {
 	display: flex;
+  flex-wrap: wrap;
 	justify-content: space-between;
 }
 #about div {
@@ -174,9 +179,10 @@ nav {
 #about .avatar {
 	display: flex;
 	justify-content: center;
+  align-items: flex-start;
 }
 #about img {
-	border-radius: 8px;
+  border-radius: 8px;
 	box-shadow: 8px 8px 16px rgba(0, 0, 0, 0.24);
 }
 .bio {
@@ -184,6 +190,14 @@ nav {
 	flex-direction: column;
 	justify-content: center;
 	align-items: flex-start;
+}
+
+/*Divider*/
+.divider {
+  width: 92%;
+  margin: 4% 4%;
+  background-color: rgba(255, 255, 255, 0.08);
+  height: 1px;
 }
 
 /*Project Section*/
@@ -214,10 +228,43 @@ footer {
 	text-align: center;
 	padding: 2%;
 }
+footer img:hover {
+  opacity: 48%;
+}
+
+/*———RESPONSIVE STYLES———*/
 
 /*Responsive Styles: Tablet*/
 @media (max-width: 800px) {
+  /*Projects Section*/
+  #projects div {
+    width: 50%;
+  }
 }
+
 /*Responsive Styles: Mobile*/
 @media (max-width: 500px) {
+  /*Hero Section*/
+  header {
+    text-align: center;
+  }
+  nav {
+    display: flex;
+    flex-flow: column wrap;
+  }
+  nav a {
+    padding: 2% 0;
+    margin-right: 0%;
+  }
+  /*About Section*/
+  #about {
+    justify-content: center;
+  }
+  #about div {
+    width: 96%;
+  }
+  .bio {
+    align-items: center;
+    text-align: center;
+  }
 }
