--- a/style/index.css
+++ b/style/index.css
@@ -75,7 +75,7 @@ legend {
 	margin: 0;
 	box-sizing: border-box;
 	max-width: 100%;
-	border: 0.5px solid rgba(255, 255, 255, 0.1);
+	/* border: 0.5px solid rgba(255, 255, 255, 0.1); */
 }
 
 /*General Styles*/
