--- a/style/index.css
+++ b/style/index.css
@@ -109,19 +109,19 @@ a:hover {
 }
 h1 {
 	font-size: 5rem;
-  line-height: 1.2;
+	line-height: 1.2;
 	margin-bottom: 2%;
 	color: white;
 }
 h2 {
 	font-size: 4rem;
-  line-height: 1.2;
+	line-height: 1.2;
 	margin-bottom: 2%;
 	color: white;
 }
 h3 {
 	font-size: 2.5rem;
-  line-height: 1.2;
+	line-height: 1.2;
 	margin-bottom: 2%;
 	color: white;
 }
@@ -164,7 +164,7 @@ nav a {
 /*About Section*/
 #about {
 	display: flex;
-  flex-wrap: wrap;
+	flex-wrap: wrap;
 	justify-content: space-between;
 }
 #about div {
@@ -173,10 +173,10 @@ nav a {
 #about .avatar {
 	display: flex;
 	justify-content: center;
-  align-items: flex-start;
+	align-items: flex-start;
 }
 #about img {
-  border-radius: 8px;
+	border-radius: 8px;
 	box-shadow: 8px 8px 16px rgba(0, 0, 0, 0.24);
 }
 .bio {
@@ -188,10 +188,10 @@ nav a {
 
 /*Divider*/
 .divider {
-  width: 92%;
-  margin: 4% 4%;
-  background-color: rgba(255, 255, 255, 0.08);
-  height: 1px;
+	width: 92%;
+	margin: 4% 4%;
+	background-color: rgba(255, 255, 255, 0.08);
+	height: 1px;
 }
 
 /*Project Section*/
@@ -223,7 +223,7 @@ footer {
 	padding: 2%;
 }
 footer a {
-  display: block;
+	display: block;
 }
 .copyright {
 	font-size: 1rem;
@@ -231,61 +231,63 @@ footer a {
 	text-align: center;
 }
 .twitter {
-  margin-top: 24px;
+	margin-top: 24px;
 }
 .twitter:hover {
-  opacity: 50%
+	opacity: 50%;
 }
 
 /*———RESPONSIVE STYLES———*/
 
 /*Ultra-wide Styles*/
 @media (min-width: 1920px) {
-  /*Hero Section*/
-  header {
-    text-align: center;
-  }
+	/*Hero Section*/
+	header {
+		text-align: center;
+		padding: 2% 4%;
+	}
 }
 
 /*Tablet Styles*/
 @media (max-width: 800px) {
-  /*Projects Section*/
-  #projects div {
-    width: 50%;
-  }
+	/*Hero Section*/
+	header {
+		text-align: center;
+	}
+	/*About Section*/
+	#about {
+		justify-content: center;
+	}
+	#about div {
+		width: 96%;
+	}
+	.bio {
+		align-items: center;
+		text-align: center;
+	}
+	/*Projects Section*/
+	#projects div {
+		width: 50%;
+	}
 }
 
 /*Mobile Styles*/
 @media (max-width: 500px) {
-  /*Hero Section*/
-  header {
-    text-align: center;
-  }
-  nav {
-    display: flex;
-    flex-flow: column wrap;
-  }
-  nav a {
-    padding: 2% 0;
-    margin-right: 0%;
-  }
-  /*About Section*/
-  #about {
-    justify-content: center;
-  }
-  #about div {
-    width: 96%;
-  }
-  .bio {
-    align-items: center;
-    text-align: center;
-  }
+	/*Hero Section*/
+	nav {
+		display: flex;
+		flex-flow: column wrap;
+	}
+	nav a {
+		padding: 2% 0;
+		margin-right: 0%;
+	}
 }
 
 /*iPhone Styles*/
 @media (max-width: 360px) {
-  /*Projects Section*/
-  #projects div {
-    width: 100%;
-  }
+	/*Projects Section*/
+	#projects div {
+		width: 100%;
+	}
 }
